# sonde

./: .env.example  .gitignore  CLAUDE.md  CODEX.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INITIAL_ISSUES.md
examples/: sources.yaml  topics.ai.yaml  topics.osint.yaml  topics.science.yaml  topics.threat-intel.yaml
examples/fixtures/: arxiv_response.xml  github_search_response.json  huggingface_models.json  local_records.jsonl  rss_feed.xml
src/sonde/: __main__.py  cli.py  config.py  constants.py  errors.py  logging.py
src/sonde/adapters/: __init__.py  arxiv.py  base.py  github.py  huggingface.py  local_jsonl.py  rss.py
src/sonde/engine/: dedupe.py  diff.py  export.py  lineage.py  linter.py  loader.py  manifests.py  runner.py  scoring.py  simulate.py
src/sonde/mcp_server/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/sonde/models/: __init__.py  artifact.py  run.py  scoring.py  topic.py
src/sonde/registry/: __init__.py  (+4 more)
src/topicops/: __main__.py  cli.py  config.py  constants.py  errors.py  logging.py
tests/: conftest.py  test_acceptance_mvp.py  test_adapters_arxiv.py  test_adapters_github.py  test_adapters_huggingface.py  test_adapters_local_jsonl.py  test_adapters_rss.py  test_apply_diff.py  test_artifact_memory.py  test_cli.py  test_cli_extended.py  test_dedupe.py  test_diff.py  test_lineage.py  test_linter.py  test_loader.py  test_manifest.py  test_mcp_resources.py  test_mcp_resources_extended.py  test_mcp_tools.py  test_mcp_tools_extended.py  test_models_topic.py  test_registry_extended.py
(+46 files in other folders)
